# task_manager_by_django

./: .Procfile.swp  .coverage  .gitignore  Makefile  Procfile  README.md  coverage.xml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: codeclimat.yml  linter.yml  test.yml  tests.yml
task_manager/: admin.py  asgi.py  filters.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/migrations/: 0001_initial.py  0002_alter_label_name_alter_status_name_and_more.py  0002_remove_label_creator.py  0003_alter_task_labels.py  0004_alter_task_labels.py  0005_alter_task_executor.py
task_manager/templates/: base.html  create_form.html  delete_form.html  home.html  index.html  labels_list.html  login.html  status_create_form.html  status_delete_form.html  status_update_form.html  statuses_list.html  task.html  task_create_form.html  task_delete_form.html  task_update_form.html  tasks_list.html  update_form.html  user_create_done.html  user_create_form.html  user_delete_done.html  user_delete_form.html  user_update_form.html  users_list.html
task_manager/tests/: test_label.py  test_status.py  test_task.py  test_user.py  test_views.py
