[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^4.1.1"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.2"
dj-database-url = "^0.5.0"
django-extensions = "^3.2.1"
psycopg2-binary = "^2.9.5"
django-filter = "^22.1"
rollbar = "^0.16.3"
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
